--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,14 +2,18 @@ cmake_minimum_required(VERSION 3.5)
 
 project(Counter)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 23)
 include_directories(${CMAKE_SOURCE_DIR})
+
+if(CMAKE_BUILD_TYPE MATCHES "Debug")
+    add_definitions(-DAVXDEBUG)
+endif()
 
 if(MSVC)
     add_compile_options(/GA /EHsc /fp:fast /MP /arch:AVX2)
     
     if(CMAKE_BUILD_TYPE MATCHES "Debug")
-        add_compile_options(/Od /Zi /Zf)
+        add_compile_options(/Od /Zi /DEBUG /Zf /MTd /Wall /analyze)
     endif()
 
     if(CMAKE_BUILD_TYPE MATCHES "Release")
@@ -21,6 +25,9 @@ elseif(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
     
     if(CMAKE_BUILD_TYPE MATCHES "Debug")
         add_compile_options(-Og -g3)
+        if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+            add_compile_options(-fanalyzer)
+        endif()
     endif()
 
     if(CMAKE_BUILD_TYPE MATCHES "Release")
